# AutoLook

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: _bootstrap.py  auto_clicker.py  calibrate_window.py  check_env.py  collect_samples.py  debug_aim.py  debug_template_match.py  list_windows.py  run_bot.py
src/autolook/: __init__.py  config.py  main.py  types.py
src/autolook/bot/: __init__.py  runner.py  selector.py  target_locator.py  throw_controller.py
src/autolook/capture/: __init__.py  screen.py
src/autolook/control/: __init__.py  camera.py  factory.py  input_controller.py  pydirectinput_controller.py
src/autolook/vision/: __init__.py  detector.py  factory.py  onnx_detector.py  template_detector.py  tracker.py  yolo_detector.py
src/autolook/window/: __init__.py  overlay.py  resolver.py  win32_window.py
tests/: test_camera.py  test_camera_key_control.py  test_input_factory.py  test_runner_capture_state.py  test_selector.py  test_target_locator.py  test_target_overlay.py  test_template_detector.py  test_throw_controller.py  test_tracker.py  test_window_resolver.py  test_yolo_detector.py
